# keepassxc

./: CMakeLists.txt
src/: CMakeLists.txt  config-keepassx.h.cmake
src/gui/: DatabaseTabWidget.cpp
src/gui/entry/: EditEntryWidget.cpp
src/ssh/: CMakeLists.txt  SshKeys.cpp  SshKeys.h  ssh-ask-pipe.c
utils/: fix-dylib.py
